// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-update-required-field fails client side validation with empty required fields 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="5"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout -12m9hbj-MuiPaper-root-MuiAlert-root"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon -1d59v4p-MuiAlert-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -6cbkjc-MuiSvgIcon-root"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message -1fo9dcf-MuiAlert-message"
                      >
                        <div
                          class="-u4dvyj"
                        >
                          <div
                            class="MuiBox-root -0"
                          >
                            We found some errors. Please review the form and make corrections.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                        data-se="identifier-container"
                        title="testUser@okta.com"
                      >
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault -187ub75-MuiChip-root"
                          data-se="identifier"
                          translate="no"
                        >
                          <div
                            class="MuiChip-icon MuiChip-iconMedium MuiChip-iconColorDefault MuiBox-root emotion-11"
                          >
                            <svg
                              aria-label="User"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -465vn1-MuiSvgIcon-root"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </div>
                          <span
                            class="MuiChip-label MuiChip-labelMedium -1w7chno-MuiChip-label"
                          >
                            testUser@okta.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Additional Profile information
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.newAttribute"
                          id="userProfile.newAttribute-label"
                        >
                          <span>
                            Some custom attribute
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 -z5kyig-MuiTypography-root"
                            tabindex="-1"
                          >
                            Optional
                          </p>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.newAttribute-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.newAttribute"
                            id="userProfile.newAttribute"
                            name="userProfile.newAttribute"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.secondEmail"
                          id="userProfile.secondEmail-label"
                        >
                          <span>
                            Secondary email
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 -z5kyig-MuiTypography-root"
                            tabindex="-1"
                          >
                            Optional
                          </p>
                        </label>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.secondEmail-hint"
                        >
                          Use a second email to 
                          <span
                            class="strong"
                          >
                             recover your account 
                          </span>
                           in case you become locked out. This email must be verified after setup.
                        </p>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                        >
                          <input
                            aria-describedby="userProfile.secondEmail-hint"
                            aria-invalid="false"
                            aria-labelledby="userProfile.secondEmail-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.secondEmail"
                            id="userProfile.secondEmail"
                            name="userProfile.secondEmail"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.newAttribute2"
                          id="userProfile.newAttribute2-label"
                        >
                          <span>
                            Some custom attribute 2
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.newAttribute2-error"
                            aria-errormessage="userProfile.newAttribute2-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.newAttribute2-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.newAttribute2"
                            id="userProfile.newAttribute2"
                            name="userProfile.newAttribute2"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.newAttribute2-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Finish
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-21"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-update-required-field should render form with one required field 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiBox-root emotion-9"
                        data-se="identifier-container"
                        title="testUser@okta.com"
                      >
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault -187ub75-MuiChip-root"
                          data-se="identifier"
                          translate="no"
                        >
                          <div
                            class="MuiChip-icon MuiChip-iconMedium MuiChip-iconColorDefault MuiBox-root emotion-10"
                          >
                            <svg
                              aria-label="User"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -465vn1-MuiSvgIcon-root"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </div>
                          <span
                            class="MuiChip-label MuiChip-labelMedium -1w7chno-MuiChip-label"
                          >
                            testUser@okta.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Additional Profile information
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.newAttribute"
                          id="userProfile.newAttribute-label"
                        >
                          <span>
                            Some custom attribute
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 -z5kyig-MuiTypography-root"
                            tabindex="-1"
                          >
                            Optional
                          </p>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.newAttribute-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.newAttribute"
                            id="userProfile.newAttribute"
                            name="userProfile.newAttribute"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.secondEmail"
                          id="userProfile.secondEmail-label"
                        >
                          <span>
                            Secondary email
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 -z5kyig-MuiTypography-root"
                            tabindex="-1"
                          >
                            Optional
                          </p>
                        </label>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.secondEmail-hint"
                        >
                          Use a second email to 
                          <span
                            class="strong"
                          >
                             recover your account 
                          </span>
                           in case you become locked out. This email must be verified after setup.
                        </p>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                        >
                          <input
                            aria-describedby="userProfile.secondEmail-hint"
                            aria-invalid="false"
                            aria-labelledby="userProfile.secondEmail-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.secondEmail"
                            id="userProfile.secondEmail"
                            name="userProfile.secondEmail"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.newAttribute2"
                          id="userProfile.newAttribute2-label"
                        >
                          <span>
                            Some custom attribute 2
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.newAttribute2-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.newAttribute2"
                            id="userProfile.newAttribute2"
                            name="userProfile.newAttribute2"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Finish
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-20"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
